# accsr

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  README_dev.md  config.json  config.py  latest_release_notes.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-linting.txt  requirements-test.txt  requirements.txt  setup.py  test.yaml  tox.ini
.github/workflows/: release.yaml  tox.yaml
build_scripts/: build-lint.sh  release-version.sh  update_docs.py
coverage/: index.html  src_accsr___init___py.html  src_accsr_config_py.html  src_accsr_conversions_py.html  src_accsr_files_py.html  src_accsr_loading_py.html  src_accsr_remote_storage_py.html  status.json
docs/: .gitignore  Quick Intro.html  Quick Intro.ipynb  conf.py  genindex.html  getting-started.rst  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/accsr/: config.html  config.rst  conversions.html  files.html  index.html  loading.html  remote_storage.html  sql_access.rst
docs/data_access/: config.rst  conversions.rst  files.rst  index.rst  loading.rst  remote_storage.rst  sql_access.rst
notebooks/: Configuration with accrs.ipynb  Quick Intro.ipynb  example.ipynb
persistence/: postgis_access.py  remote_storage.py
public/: index.html
scripts/: run_sample.py
src/accsr/: __init__.py  config.py  conversions.py  loading.py  remote_storage.py  sql_access.py
(+34 files in other folders)
